--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+TO DO:
+
+- link on logo on header to main
+- link on tabs
+- darken web icons in background
+- 
+
+
 <svg className={styles.svg} id="visual" viewBox="0 0 9000 5000" width="100%" height="auto" version="1.1">
           {/* <rect className={styles.base} x="0" y="0" width="100%" height="auto" fill="#fff"/> */}
           <path className={styles.base} d="M0 3441L125 3460.2C250 3479.3 500 3517.7 750 3458C1000 3398.3 
